[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version="0.20.0", features=["csr"] }
wasm-bindgen = "0.2"
serde = "1.0.152"
gloo-storage = "0.2.2"
instant = "0.1.12"
js-sys = "0.3.60"
gloo-console = "0.2.3"
yewdux = "0.9"


[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature in order to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "Storage",
]
